--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "parse server for banlist app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [
     "banlist"
@@ -16,5 +16,8 @@
     "express": "^4.17.1",
     "parse-dashboard": "^2.1.0",
     "parse-server": "^4.5.0"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
