--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banlist",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "parse server for banlist app",
   "main": "index.js",
   "scripts": {
@@ -12,9 +12,8 @@
   "author": "lui2mi",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "parse-dashboard": "^2.1.0",
     "parse-server": "^4.5.0"
   },
   "engines": {
