--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "parse-server": "^4.5.0"
+    "parse-server": "^4.5.0",
+    "axios": "^0.21.1"
   },
   "engines": {
     "node": "12.x"
